--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,10 @@
 
-.bigDivs{
-  /* border: solid #712B75 1px; */
-}
-
 .containerDiv{
   display: grid;
   justify-content: stretch;
   /* column-gap: 1px; */
-  /* width: 50px; */
-  /* height: 50px; */
+  width: 600px;
+  height: 670px;
   /* flex-wrap: wrap; */
 }
 
@@ -17,4 +13,10 @@
   height: 20px;
   margin: 25px;
   background-color: lightblue;
+}
+
+.heading{
+  text-align: center;
+  font-size: 20px;
+  margin: 0;
 }
