--- a/styles.css
+++ b/styles.css
@@ -11,12 +11,22 @@
 .button{
   width: 100%;
   height: 20px;
-  margin: 25px;
+  margin: 5px;
   background-color: lightblue;
+}
+
+.colorbutton{
+  background-color: white;
+  border: solid black 1px;
 }
 
 .heading{
   text-align: center;
   font-size: 20px;
   margin: 0;
+}
+
+
+.colorbuttonclick{
+  background-color: lightblue;
 }
